cmake_minimum_required(VERSION 3.2)
project(hierarchical_map_compiler)
include_directories(include)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-DSRC_DIRECTORY=${CMAKE_SOURCE_DIR}")
if(APPLE)
  link_directories(lib/darwin)
  set(htd "libhtd.0.dylib")
  set(gtest_main "libgtest_main.a")
  set(gtest "libgtest.a")
  set(psdd "libpsdd.a")
  set(sdd "libsdd.a")
  set(gmock "libgmock.a")
  set(gmock_main "libgmock_main.a")
endif(APPLE)
include_directories(include)
file(GLOB HIERARCHICAL_MAP_COMPILER_SRC_FILES "src/*.h" "src/*.cpp" "src/*.c")
file(GLOB HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES "test/*.cpp")
add_library(hmc ${HIERARCHICAL_MAP_COMPILER_SRC_FILES})
add_executable(hmc_test ${HIERARCHICAL_MAP_COMPILER_TEST_SRC_FILES})
add_executable(hmc_main main.cpp)
add_executable(hmc_classifier classifier.cpp)
target_link_libraries(hmc_test hmc ${psdd} ${sdd} gmp ${gtest} ${gtest_main} ${gmock} ${gmock_main} ${htd} pthread)
target_link_libraries(hmc_main hmc ${psdd} ${sdd} gmp ${htd})
target_link_libraries(hmc_classifier hmc ${psdd} ${sdd} gmp ${htd})

